--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,114 @@
 <ng-toast [style]="{ width: '300px', paddingTop: '30px' }"></ng-toast>
 
 
+
+  <!-- <form #jobPostForm="ngForm" (ngSubmit)="submitComment()">
+    <div>
+      <label for="toBudget">To Budget:</label>
+      <input id="toBudget" name="ToBudget" ngModel required [(ngModel)]="commentService.jobData.toBudget"/>
+    </div>
+    <div>
+      <label for="usersId">Users Id:</label>
+      <input id="usersId" name="UsersId" ngModel required  [(ngModel)]="commentService.jobData.usersId"/>
+    </div>
+    <div>
+      <label for="fileName">File Name:</label>
+      <input id="fileName" name="FileName" ngModel required [(ngModel)]="commentService.jobData.fileName"/>
+    </div>
+    <div>
+      <label for="jobUniqueId">Job Unique Id:</label>
+      <input id="jobUniqueId" name="JobUniqueId" ngModel required [(ngModel)]="commentService.jobData.jobUniqueId"/>
+    </div>
+    <div>
+      <label for="attachUrl">Attach Url:</label>
+      <input id="attachUrl" name="attachUrl" ngModel required [(ngModel)]="commentService.jobData.attachUrl"/>
+    </div>
+    <div>
+      <label for="experience">Experience:</label>
+      <input id="experience" name="Experience" ngModel required [(ngModel)]="commentService.jobData.experience"/>
+    </div>
+    <div>
+      <label for="postDate">Post Date:</label>
+      <input id="postDate" name="PostDate" ngModel required [(ngModel)]="commentService.jobData.postDate"/>
+    </div>
+    <div>
+      <label for="durationOfProject">Duration Of Project:</label>
+      <input id="durationOfProject" name="DurationOfProject" ngModel required [(ngModel)]="commentService.jobData.durationOfProject"/>
+    </div>
+    <div>
+      <label for="fromBudget">From Budget:</label>
+      <input id="fromBudget" name="FromBudget" ngModel required [(ngModel)]="commentService.jobData.fromBudget"/>
+    </div>
+    <div>
+      <label for="projectEndDate">Project End Date:</label>
+      <input id="projectEndDate" name="ProjectEndDate" ngModel required [(ngModel)]="commentService.jobData.projectEndDate"/>
+    </div>
+    <div>
+      <label for="currency">Currency:</label>
+      <input id="currency" name="Currency" ngModel required [(ngModel)]="commentService.jobData.currency"/>
+    </div>
+    <div>
+      <label for="skillSet">Skill Set:</label>
+      <input id="skillSet" name="SkillSet" ngModel required [(ngModel)]="commentService.jobData.skillSet" />
+    </div>
+    <div>
+      <label for="userEmail">User Email:</label>
+      <input id="userEmail" name="UserEmail" ngModel required [(ngModel)]="commentService.jobData.userEmail"/>
+    </div>
+    <div>
+      <label for="status">Status:</label>
+      <input id="status" name="Status" ngModel required [(ngModel)]="commentService.jobData.status"/>
+    </div>
+    <div>
+      <label for="service">Service:</label>
+      <input id="service" name="Service" ngModel required [(ngModel)]="commentService.jobData.service"/>
+    </div>
+    <div>
+      <label for="lastModifiedBy">Last Modified By:</label>
+      <input id="lastModifiedBy" name="LastModifiedBy" ngModel required [(ngModel)]="commentService.jobData.lastModifiedBy"/>
+    </div>
+    <div>
+      <label for="projectStartDate">Project Start Date:</label>
+      <input id="projectStartDate" name="ProjectStartDate" ngModel required [(ngModel)]="commentService.jobData.projectStartDate"/>
+    </div>
+
+    <div>
+      <label for="jobTitle">Job Title:</label>
+      <input id="jobTitle" name="JobTitle" ngModel required [(ngModel)]="commentService.jobData.jobTitle"/>
+    </div>
+    
+    <div>
+      <label for="file">File:</label>
+      <input type="file" id="file" name="file" (change)="onFileSelected($event)" />
+    </div>
+    <div>
+      <label for="description">Description:</label>
+      <input id="description" name="Description" ngModel required [(ngModel)]="commentService.jobData.description"/>
+    </div>
+    <div>
+      <label for="complexity">Complexity:</label>
+      <input id="complexity" name="Complexity" ngModel required [(ngModel)]="commentService.jobData.complexity"/>
+    </div>
+    <div>
+      <label for="rateBasis">Rate Basis:</label>
+      <input id="rateBasis" name="RateBasis" ngModel required [(ngModel)]="commentService.jobData.rateBasis"/>
+    </div>
+    <div>
+      <label for="createdBy">Created By:</label>
+      <input id="createdBy" name="CreatedBy" ngModel required [(ngModel)]="commentService.jobData.createdBy"/>
+    </div>
+    <div>
+      <label for="dateCreated">Date Created:</label>
+      <input id="dateCreated" name="DateCreated" ngModel required [(ngModel)]="commentService.jobData.dateCreated"/>
+    </div>
+    <div>
+      <label for="dateLastModified">Date Last Modified:</label>
+      <input id="dateLastModified" name="DateLastModified" ngModel required [(ngModel)]="commentService.jobData.dateLastModified"/>
+    </div>
+    <div>
+      <label for="id">Id:</label>
+      <input id="id" name="Id" ngModel required [(ngModel)]="commentService.jobData.id"/>
+    </div>
+    <button type="submit">Submit</button>
+  </form> -->
+  
