--- a/src/app/modules/accept-request/accept-request.component.html
+++ b/src/app/modules/accept-request/accept-request.component.html
@@ -221,8 +221,8 @@
         </div>
         <div class="covel att">Attachments</div>
         <img src="../assets/erdownload_.png" alt="Pubkin Attachment" class="down"> <span class="file">
-          <a [href]="imageUrl + selectedrequest.fileUrl" target="_blank" download
-            class="no-underline dropname3">{{selectedrequest.fileUrl.split('_')[1]}}</a></span><br>
+          <a [href]="selectedrequest.fileUrl" target="_blank" download
+            class="no-underline dropname3">{{selectedrequest.fileName}}</a></span><br>
         <!-- <button class="dld">Download</button> -->
       </div>
     </div>
