--- a/src/app/modules/comments/comments.component.scss
+++ b/src/app/modules/comments/comments.component.scss
@@ -675,6 +675,9 @@ ul {
 }
 .foldericon {  
     margin-top: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .box1 {
     width: 100%;
@@ -715,6 +718,7 @@ ul {
     align-items: center;
     gap: 10px;
     margin-top: 17px;
+    cursor: pointer;
     border-radius: 4px;
 border: 1px solid #A426D1;
 background: #A426D1;color: #FFF;
@@ -1041,6 +1045,9 @@ padding-left: 10px;
 }
 .foldericon {  
     margin-top: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .box1 {
     width: 100%;
@@ -1077,6 +1084,7 @@ padding-left: 10px;
   .uploadbtn{ 
     display: inline-flex;
     padding: 12px 32px;
+    cursor: pointer;
     justify-content: center;
     align-items: center;
     gap: 10px;
@@ -1191,10 +1199,11 @@ margin-bottom: -12px;
   
   .dropname3{    
     color: #535353;
-    margin-left: 23px;
+    margin-left: 4px;
     font-family: "League Spartan";
     font-size: 20px;
     font-style: normal;
+    text-decoration: none;
 }
 
 .closeicon { 
