--- a/src/app/modules/job-post/job-post.component.html
+++ b/src/app/modules/job-post/job-post.component.html
@@ -16,7 +16,7 @@
         [(ngModel)]="jobservice.jobData.projectStartDate">
     <input type="hidden" ngModel [value]="jobservice.jobData.projectEndDate" name="projectEndDate"
         #projectEndDate="ngModel" [(ngModel)]="jobservice.jobData.projectEndDate">
-    <input type="hidden" [(ngModel)]="skillset" [value]="skillset" name="experience" #experience="ngModel"
+    <input type="text" [(ngModel)]="skillset" [value]="skillset" name="experience" #experience="ngModel"
         [(ngModel)]="jobservice.jobData.experience">
     <input type="hidden" name="durationOfProject" [value]="jobservice.jobData.durationOfProject"
         #durationOfProject="ngModel" [(ngModel)]="jobservice.jobData.durationOfProject">
@@ -39,7 +39,7 @@
     <button class="d-none" #firstButton type="submit">Submit</button>
 </form>
 
-
+<div *ngIf="success">
 <div *ngIf="GoNext === 'button1'">
     <div class="container mt-3">
         <div class="row">
@@ -594,10 +594,28 @@
                 <button class="back" (click)="GoNextBtn('button5')">Back</button>
             </div>
             <div class="col-5">
-                <button class="next" (click)="goodbye();" routerLink="/authors">Post a Job</button>
+                <button class="next" (click)="goodbye();" >Post a Job</button>
             </div>
             <div class="col-1">
             </div>
         </div>
     </div>
 </div>
+
+</div>
+
+
+<div class="all-success" *ngIf="!success">
+    <div class="successmsg">
+      <p class="successhead">Success! Your job is sent now</p>
+      <img class="whopee" src="../assets/Success.gif" alt="Success" />
+      <p class="redirecte">Redirecting now...</p>
+      <img
+        class="successtick"
+        src="../assets/Lottie gif.gif"
+        alt="Pubkin-success"
+      />
+    </div>
+  </div>
+
+
