--- a/src/app/modules/profiledetails/profiledetails.component.scss
+++ b/src/app/modules/profiledetails/profiledetails.component.scss
@@ -1376,6 +1376,7 @@ select {
     font-size: 20px;
     font-style: normal;
     font-weight: 300;
+    cursor: pointer;
     margin-top: 15px;
     margin-left: 5px;
   }
